fix: handle SPA routing on GitHub Pages and hide product buttons on mobile
Copy index.html to 404.html during build so refreshing on sub-routes
works on GitHub Pages. Also hide back/checkout buttons on mobile product
page and update footer text.

--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -7,7 +7,7 @@
     align-items: flex-start;
     justify-content: space-between;
 
-    > .section-top__button:first-child {
+    > .section-top__button {
       display: none;
 
       @include screen-600 {
